--- a/style.css
+++ b/style.css
@@ -7,14 +7,20 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: blueviolet;
+}
+
+h1 {
+    color: brown;
 }
 
 #board {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    color: aqua;
 }
 
-#board > div {
-     background-color: black;
+#board > div{
+    color: green;
 }
