working start button for timer

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    color: purple;
+    color: purple ;
     margin-top: 50px;
     margin-bottom: 5px;
 }
@@ -21,20 +21,20 @@ h4 {
     margin-bottom: 30px;
 }
 
-#button1, #button2 {
+#button1, #button2, #clock {
     display: inline;
+    margin: 30px;
 }
 
 #board {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr); 
     grid-auto-rows: repeat(100px, auto); 
 }
 
 #board > div{
-    color: green;
-    border: 2px solid black;
-    height: 200px;
+    background: black;
+    height: 150px;
     width: 150px;
     margin: 10px;
 }
